--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,19 @@
     background-color: green;
 }
 
-#inner {
-    position: absolute;
+.inner {
+  position: absolute;
     width: 200px;
     height: 200px;
+}
+
+.inner1 {
     background-color: blue;
     right: 0;
     top: 0;
 }
 
-#inner2 {
-    position: absolute;
-    width: 200px;
-    height: 200px;
+.inner2 {
     background-color: red;
     left: 0;
     bottom: 0;
